--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -1,10 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".PlayerActivity">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              xmlns:ads="http://schemas.android.com/apk/res-auto"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical"
+              android:keepScreenOn="true"
+>
+    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
+            android:id="@+id/exoplayer"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <FrameLayout
+            android:layout_height="0dp"
+            android:layout_width="match_parent"
+            android:layout_weight="1"
+    >
+
+        <com.google.android.exoplayer2.ui.SubtitleView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/subtitle"
+                android:visibility="gone"
+        />
+        <WebView android:layout_width="match_parent"
+                 android:id="@+id/webView"
+                 android:layout_height="match_parent"></WebView>
+
+    </FrameLayout>
+
+
+</LinearLayout>
