--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,5 +6,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".MainActivity">
+    <com.aurelhubert.ahbottomnavigation.AHBottomNavigation android:layout_width="match_parent"
+                                                           android:id="@+id/bottomNavigation"
+                                                           android:layout_height="wrap_content"
+                                                           android:layout_marginBottom="8dp"
+                                                           app:layout_constraintRight_toRightOf="parent"
+                                                           app:layout_constraintLeft_toLeftOf="parent"
+                                                           app:layout_constraintBottom_toBottomOf="parent">
+
+    </com.aurelhubert.ahbottomnavigation.AHBottomNavigation>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
