--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<androidx.drawerlayout.widget.DrawerLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/drawerLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity">
-    <com.aurelhubert.ahbottomnavigation.AHBottomNavigation android:layout_width="match_parent"
-                                                           android:id="@+id/bottomNavigation"
-                                                           android:layout_height="wrap_content"
-                                                           android:layout_marginBottom="8dp"
-                                                           app:layout_constraintRight_toRightOf="parent"
-                                                           app:layout_constraintLeft_toLeftOf="parent"
-                                                           app:layout_constraintBottom_toBottomOf="parent">
+        tools:openDrawer="end">
 
-    </com.aurelhubert.ahbottomnavigation.AHBottomNavigation>
+    <androidx.constraintlayout.widget.ConstraintLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:context=".MainActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <include layout="@layout/toolbar_main"
+                 app:layout_constraintStart_toStartOf="parent"
+                 app:layout_constraintEnd_toEndOf="parent"
+                 app:layout_constraintTop_toTopOf="parent"
+        />
+
+        <com.aurelhubert.ahbottomnavigation.AHBottomNavigation android:layout_width="match_parent"
+                                                               android:id="@+id/bottomNavigation"
+                                                               android:layout_height="wrap_content"
+                                                               android:layout_marginBottom="8dp"
+                                                               app:layout_constraintRight_toRightOf="parent"
+                                                               app:layout_constraintLeft_toLeftOf="parent"
+                                                               app:layout_constraintBottom_toBottomOf="parent">
+
+        </com.aurelhubert.ahbottomnavigation.AHBottomNavigation>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <com.google.android.material.navigation.NavigationView
+            android:id="@+id/nav_view"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="end|right"
+    >
+        <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent">
+            <include android:id="@+id/nav_header"
+                     android:layout_width="match_parent"
+                     android:layout_height="wrap_content"
+                     android:layout_alignParentTop="true"
+                     layout="@layout/nav_header_main"/>
+            <ListView
+                    android:layout_below="@id/nav_header"
+                    android:id="@+id/listViewMenu"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+        </RelativeLayout>
+    </com.google.android.material.navigation.NavigationView>
+
+</androidx.drawerlayout.widget.DrawerLayout>
