--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,10 +17,17 @@
             tools:context=".MainActivity">
 
         <include layout="@layout/toolbar_main"
+                 android:id="@+id/header"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintTop_toTopOf="parent"
         />
+        <FrameLayout android:layout_width="match_parent"
+                     android:id="@+id/frameLayout"
+                     app:layout_constraintStart_toStartOf="parent"
+                     app:layout_constraintEnd_toEndOf="parent"
+                     app:layout_constraintBottom_toTopOf="@id/bottomNavigation"
+                     app:layout_constraintTop_toBottomOf="@id/header" android:layout_height="0dp"/>
 
         <com.aurelhubert.ahbottomnavigation.AHBottomNavigation android:layout_width="match_parent"
                                                                android:id="@+id/bottomNavigation"
