Try for card animation

--- a/app/src/main/res/layout/fragment_review.xml
+++ b/app/src/main/res/layout/fragment_review.xml
@@ -16,28 +16,24 @@
                   app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="24dp" android:layout_marginRight="24dp">
 
-        <ViewFlipper
-                android:id="@+id/simpleViewFlipper"
-                android:addStatesFromChildren="true"
-                android:layout_width="match_parent"
-                android:layout_weight="1"
-                android:layout_height="0dp">
-
+        <FrameLayout android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1">
 
             <TextView
-                    android:layout_width="match_parent"
-                    android:background="@android:color/holo_red_dark"
-                    android:layout_height="match_parent"
-                    android:text="First TextView" />
-
-            <TextView
+                    android:id="@+id/cartBack"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@android:color/holo_blue_bright"
-                    android:text="Second TextView" />
+                    android:text="back" />
+            <TextView
+                    android:id="@+id/cartFront"
+                    android:layout_width="match_parent"
+                    android:background="@android:color/holo_red_dark"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:text="Front" />
 
-        </ViewFlipper >
 
+        </FrameLayout>
         <Button android:id="@+id/btn1"
 
                 android:layout_width="wrap_content" android:layout_height="wrap_content"/>
