--- a/app/src/main/res/anim/flipper_right_in.xml
+++ b/app/src/main/res/anim/flipper_right_in.xml
@@ -2,17 +2,21 @@
 <set xmlns:android="http://schemas.android.com/apk/res/android"
      android:interpolator="@android:anim/accelerate_interpolator"
      android:shareInterpolator="true">
-    <rotate
-            android:fromDegrees="0"
-            android:pivotX="50%"
-            android:pivotY="50%"
-            android:interpolator="@android:interpolator/accelerate_decelerate"
-            android:duration="3000"
-            android:toDegrees="180" />
-
     <alpha
             android:fromAlpha="1.0"
+            android:duration="0"
+            android:toAlpha="0.0" />
+    <rotate
+            android:fromDegrees="180"
+            android:pivotX="50%"
+            android:duration="3000"
+            android:interpolator="@android:interpolator/accelerate_decelerate"
+            android:pivotY="50%"
+            android:toDegrees="0" />
+    <alpha
+            android:fromAlpha="0.0"
             android:duration="1"
             android:startOffset="1500"
-            android:toAlpha="0.0" />
+            android:toAlpha="1.0" />
+
 </set>
