--- a/app/src/main/res/animator/card_flip_right_in.xml
+++ b/app/src/main/res/animator/card_flip_right_in.xml
@@ -13,13 +13,13 @@
         android:valueTo="0"
         android:propertyName="rotationY"
         android:interpolator="@android:interpolator/accelerate_decelerate"
-        android:duration="@dimen/card_flip_time_full" />
+        android:duration="@integer/anim_length" />
 
 <!-- Half-way through the rotation (see startOffset), set the alpha to 1. -->
 <objectAnimator
         android:valueFrom="0.0"
         android:valueTo="1.0"
         android:propertyName="alpha"
-        android:startOffset="@dimen/card_flip_time_half"
+        android:startOffset="@integer/anim_length_half"
         android:duration="1" />
 </set>
