--- a/app/src/main/res/layout/fragment_review.xml
+++ b/app/src/main/res/layout/fragment_review.xml
@@ -16,7 +16,9 @@
                   app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="24dp" android:layout_marginRight="24dp">
 
-        <FrameLayout android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1">
+        <FrameLayout
+                android:id="@+id/cardContainer"
+                android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1">
 
             <TextView
                     android:id="@+id/cartBack"
@@ -34,9 +36,6 @@
 
 
         </FrameLayout>
-        <Button android:id="@+id/btn1"
-
-                android:layout_width="wrap_content" android:layout_height="wrap_content"/>
 
     </LinearLayout>
 
