--- a/app/src/main/res/layout/fragment_review.xml
+++ b/app/src/main/res/layout/fragment_review.xml
@@ -18,7 +18,9 @@
 
         <FrameLayout
                 android:id="@+id/cardContainer"
-                android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1">
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1">
 
             <TextView
                     android:id="@+id/cartBack"
@@ -33,7 +35,6 @@
                     android:layout_height="match_parent"
                     android:gravity="center"
                     android:text="Front" />
-
 
         </FrameLayout>
 
