--- a/app/src/main/res/layout/toolbar_main.xml
+++ b/app/src/main/res/layout/toolbar_main.xml
@@ -12,4 +12,12 @@
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/ic_menu" android:id="@+id/menu"
             android:layout_marginEnd="12dp" android:layout_alignParentEnd="true"/>
+
+    <ImageView android:layout_width="wrap_content"
+               app:srcCompat="@drawable/ic_filter"
+               android:layout_marginLeft="12dp"
+               android:id="@+id/filter"
+               android:layout_centerVertical="true"
+               android:layout_height="wrap_content" android:layout_marginStart="12dp"/>
+
 </RelativeLayout>
