--- a/app/src/main/res/layout/item_video.xml
+++ b/app/src/main/res/layout/item_video.xml
@@ -3,6 +3,8 @@
                                                    xmlns:app="http://schemas.android.com/apk/res-auto"
                                                    android:orientation="vertical"
                                                    android:layout_width="match_parent"
+
+
                                                    android:layout_height="100dp">
 
     <ImageView
@@ -10,6 +12,16 @@
             android:src="@android:color/holo_blue_bright"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
+
+    <TextView
+            android:layout_width="wrap_content"
+            android:id="@+id/videoTitle"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="15dp"
+            android:layout_height="wrap_content"/>
+
 
     <TextView
             android:id="@+id/videoDuration"
