Ui of controls in player

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="logo">#33ccff</color>
+    <color name="bg_player">#4DD5C4C4</color>
 </resources>
