--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -7,7 +7,7 @@
               android:orientation="vertical"
 >
     <com.google.android.exoplayer2.ui.SimpleExoPlayerView
-            android:id="@+id/exoplayer"
+            android:id="@+id/simpleExoplayer"
             android:layout_width="match_parent"
             android:layout_height="200dp"/>
 
