--- a/app/src/main/res/layout/fragment_send_code.xml
+++ b/app/src/main/res/layout/fragment_send_code.xml
@@ -31,8 +31,7 @@
             app:layout_constraintTop_toBottomOf="@+id/title"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-
-            android:id="@+id/linearLayout" app:layout_constraintHorizontal_bias="0.5"
+            android:id="@+id/linearLayout"
             app:layout_constraintBottom_toTopOf="@+id/verify">
 
 
@@ -50,7 +49,7 @@
                 android:paddingRight="20dp"
                 android:paddingBottom="10dp"
                 android:textColor="#273bd2"
-                android:textSize="16dp"
+                android:textSize="16sp"
 
         />
 
@@ -69,7 +68,7 @@
                 android:paddingLeft="20dp"
                 android:paddingBottom="10dp"
                 android:textColor="#273bd2"
-                android:textSize="16dp"
+                android:textSize="16sp"
 
         />
 
@@ -88,7 +87,7 @@
                 android:paddingLeft="20dp"
                 android:paddingBottom="10dp"
                 android:textColor="#273bd2"
-                android:textSize="16dp"
+                android:textSize="16sp"
 
         />
 
@@ -108,7 +107,7 @@
                 android:paddingLeft="20dp"
                 android:paddingBottom="10dp"
                 android:textColor="#273bd2"
-                android:textSize="16dp"
+                android:textSize="16sp"
 
         />
 
