Implement add to leitner

--- a/app/src/main/res/layout/toolbar_main.xml
+++ b/app/src/main/res/layout/toolbar_main.xml
@@ -20,7 +20,18 @@
             android:layout_width="wrap_content"
             android:layout_centerVertical="true"
             android:layout_marginLeft="12dp"
+            android:layout_alignParentLeft="true"
             app:srcCompat="@drawable/ic_more_vert"
             android:id="@+id/filter"
             android:layout_height="wrap_content"/>
+
+    <ImageView
+            android:layout_width="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="12dp"
+            android:layout_toRightOf="@id/filter"
+            app:srcCompat="@drawable/ic_add"
+            android:id="@+id/add_g5"
+            android:layout_height="wrap_content"/>
+
 </RelativeLayout>
