--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#D81B60</color>
     <color name="logo">#33ccff</color>
     <color name="bg_player">#4DD5C4C4</color>
+    <color name="bg_frame">#2CD3D0D0</color>
 </resources>
