--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,5 +26,11 @@
         <item name="android:fontFamily">@font/iran_sans_fa_num_medium</item>
         <item name="android:textSize">13sp</item>
     </style>
+    <style name="fullScreenDialog" parent="Theme.AppCompat.Dialog">
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:windowIsFloating">false</item>
+        <item name="android:windowBackground">@color/bg_progress</item>
+    </style>
 
 </resources>
