--- a/app/src/main/res/layout/fragment_add_to_leitner.xml
+++ b/app/src/main/res/layout/fragment_add_to_leitner.xml
@@ -13,14 +13,14 @@
               app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintRight_toRightOf="parent"
               android:id="@+id/txtPhrase"
-              android:text="@string/phrase"
+              android:text="@string/title"
               android:fontFamily="@font/iran_sans_fa_num_medium"
               android:textSize="15sp"
               android:padding="8dp"
               android:layout_height="wrap_content"/>
 
     <EditText android:layout_width="0dp"
-              android:id="@+id/phrase"
+              android:id="@+id/title"
               app:layout_constraintTop_toBottomOf="@id/txtPhrase"
               app:layout_constraintStart_toStartOf="parent"
               android:layout_marginTop="8dp"
@@ -33,7 +33,7 @@
               android:layout_height="100dp"/>
 
     <TextView android:layout_width="wrap_content"
-              app:layout_constraintTop_toBottomOf="@id/phrase"
+              app:layout_constraintTop_toBottomOf="@id/title"
               android:layout_marginTop="8dp"
               app:layout_constraintRight_toRightOf="parent"
               android:id="@+id/txtDesc"
