--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,10 +7,10 @@
     <androidx.recyclerview.widget.RecyclerView android:layout_width="match_parent"
                                                android:id="@+id/recyclerView"
                                                android:layout_height="match_parent"/>
-    <include layout="@layout/loading"
-             android:layout_width="0dp"
-             android:layout_height="0dp"
-             app:layout_constraintStart_toStartOf="@+id/recyclerView"
-             app:layout_constraintTop_toTopOf="@+id/recyclerView" app:layout_constraintEnd_toEndOf="parent"
-             app:layout_constraintBottom_toBottomOf="parent"/>
+    <!--<include layout="@layout/loading"-->
+             <!--android:layout_width="0dp"-->
+             <!--android:layout_height="0dp"-->
+             <!--app:layout_constraintStart_toStartOf="@+id/recyclerView"-->
+             <!--app:layout_constraintTop_toTopOf="@+id/recyclerView" app:layout_constraintEnd_toEndOf="parent"-->
+             <!--app:layout_constraintBottom_toBottomOf="parent"/>-->
 </androidx.constraintlayout.widget.ConstraintLayout>
