--- a/app/src/main/res/layout/fragment_review.xml
+++ b/app/src/main/res/layout/fragment_review.xml
@@ -73,6 +73,9 @@
 
                     <TextView android:layout_width="wrap_content"
                               android:id="@+id/info"
+                              android:text="sdfdf"
+                              android:fontFamily="@font/iran_sans_fa_num_medium"
+
                               app:layout_constraintTop_toBottomOf="@id/sentence"
                               app:layout_constraintLeft_toLeftOf="parent"
                               android:layout_marginLeft="8dp"
@@ -96,11 +99,14 @@
         <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                            android:id="@+id/cartFront"
                                                            android:background="@android:color/white"
-                                                           android:layout_height="match_parent">
+                                                       android:layout_height="match_parent">
             <TextView
                     android:id="@+id/contentFront"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:padding="8dp"
+                    android:fontFamily="@font/iran_sans_fa_num_medium"
                     android:text="Front" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                     android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="8dp"
@@ -130,6 +136,7 @@
                   app:layout_constraintLeft_toLeftOf="parent"
                   android:layout_height="wrap_content">
         <TextView android:layout_width="0dp"
+                  android:id="@+id/know"
                   style="@style/Button"
                   android:text="@string/know"
                   android:layout_marginRight="5dp"
@@ -138,6 +145,7 @@
         <TextView android:layout_width="0dp"
                   android:layout_marginLeft="5dp"
                   android:text="@string/dont_know"
+                  android:id="@+id/notKnow"
                   style="@style/Button"
                   android:layout_weight="0.5" android:layout_height="wrap_content"
                   android:layout_marginStart="5dp"/>
