Use place holder and scale type for cover image

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="bg_player">#4DD5C4C4</color>
     <color name="bg_frame">#2CD3D0D0</color>
     <color name="bg_progress">#23BDBBBB</color>
+    <color name="bg_video_cover">#A2A0A0</color>
 </resources>
