Use cartFront and cartBack for leitner

--- a/app/src/main/res/layout/fragment_add_to_leitner.xml
+++ b/app/src/main/res/layout/fragment_add_to_leitner.xml
@@ -13,7 +13,7 @@
               app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintRight_toRightOf="parent"
               android:id="@+id/txtPhrase"
-              android:text="@string/title"
+              android:text="@string/cartFront"
               android:fontFamily="@font/iran_sans_fa_num_medium"
               android:textSize="15sp"
               android:padding="8dp"
@@ -37,7 +37,7 @@
               android:layout_marginTop="8dp"
               app:layout_constraintRight_toRightOf="parent"
               android:id="@+id/txtDesc"
-              android:text="@string/desc"
+              android:text="@string/cartBack"
               android:fontFamily="@font/iran_sans_fa_num_medium"
               android:textSize="15sp"
               android:padding="8dp"
