--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -11,24 +11,44 @@
             android:layout_width="match_parent"
             android:layout_height="200dp"/>
 
-    <FrameLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_height="0dp"
+            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_weight="1"
     >
 
-        <com.google.android.exoplayer2.ui.SubtitleView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/subtitle"
-                android:visibility="gone"
-        />
+        <!--<com.google.android.exoplayer2.ui.SubtitleView-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:id="@+id/subtitle"-->
+        <!--android:visibility="gone"-->
+        <!--/>-->
         <WebView android:layout_width="match_parent"
-                 android:id="@+id/webView"
+                 android:id="@+id/webViewEng"
+                 app:layout_constraintTop_toTopOf="parent"
+                 app:layout_constraintStart_toStartOf="parent"
+                 app:layout_constraintEnd_toEndOf="parent"
+                 app:layout_constraintBottom_toTopOf="@id/guideline"
                  android:visibility="visible"
-                 android:layout_height="match_parent"></WebView>
+                 android:layout_height="0dp"/>
 
-    </FrameLayout>
+        <WebView android:layout_width="match_parent"
+                 android:id="@+id/webViewPer"
+                 app:layout_constraintTop_toBottomOf="@id/guideline"
+                 app:layout_constraintStart_toStartOf="parent"
+                 app:layout_constraintEnd_toEndOf="parent"
+                 app:layout_constraintBottom_toBottomOf="parent"
+                 android:visibility="visible"
+                 android:layout_height="0dp"/>
+
+        <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
+                                                    android:layout_height="wrap_content"
+                                                    android:id="@+id/guideline"
+                                                    app:layout_constraintGuide_percent="0.5"
+                                                    android:orientation="horizontal"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 </LinearLayout>
