--- a/app/src/main/res/layout/exo_playback_control_view.xml
+++ b/app/src/main/res/layout/exo_playback_control_view.xml
@@ -75,6 +75,19 @@
                 android:layout_marginTop="8dp"
                 app:layout_constraintTop_toTopOf="parent"/>
 
+        <ImageView
+                android:id="@+id/download"
+                app:srcCompat="@drawable/ic_file_download"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toStartOf="@id/more"
+                android:layout_marginEnd="8dp"
+                android:padding="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toTopOf="parent"/>
+
+
         <TextView
                 android:id="@+id/exo_position"
                 android:layout_width="wrap_content"
